Revert "ci(go): generate: Use go mod edit to install properly versioned tools"
This reverts commit f4c4e2b876698fa92b44b7061dc89e079cb98a85.

--- a/gh-actions/go/generate/action.yaml
+++ b/gh-actions/go/generate/action.yaml
@@ -24,22 +24,6 @@ outputs:
 runs:
   using: "composite"
   steps:
-    - name: Set up jq
-      shell: bash
-      env:
-        DEBIAN_FRONTEND: noninteractive
-      run: |
-        echo "::group::Download jq"
-        set -eu
-        if [ "${{runner.os}}" = "Windows" ]; then
-          winget.exe install jqlang.jq --accept-source-agreements --accept-package-agreements --silent --verbose || true
-        else
-          SUDO=$(command -v sudo || true)
-          $SUDO apt update
-          $SUDO apt install jq
-        fi
-        echo "::endgroup::"
-        jq --version
     - name: Install tools and dependencies
       id: proto-deps
       working-directory: ${{ inputs.tools-directory }}
@@ -47,8 +31,7 @@ runs:
         echo "::group::Install tools and dependencies"
         set -eu
 
-        tools=$(go mod edit --json | \
-          jq -r '.Require[] | select(.Indirect!=true) | [.Path,.Version] | join("@")')
+        tools=$(grep -o '_ ".*"' *.go | cut -d '"' -f 2)
 
         needsProtoc=false
         for tool in ${tools}; do
