build-debian: Use docker container also to prepare the source package
In this way we can use the proper distro version number

--- a/gh-actions/common/build-debian/action.yml
+++ b/gh-actions/common/build-debian/action.yml
@@ -55,28 +55,50 @@ runs:
       run: |
         set -eu
 
-        echo "::group::Install devscripts"
-        DEBIAN_FRONTEND=noninteractive sudo apt update
-        DEBIAN_FRONTEND=noninteractive sudo apt install -y devscripts
-        echo "::endgroup::"
-
         echo "::group::Create local version with commit and docker container"
         cd '${{ inputs.source-dir }}'
 
-        # Sanitize the docker name so that it stick to debian policy
-        # https://www.debian.org/doc/debian-policy/ch-controlfields.html#version
-        sanitized_docker=$( echo "${{ inputs.docker-image }}" | sed -r 's/[^a-zA-Z0-9.+~]+/+/g' )
-
         # Short commit to avoid "package-has-long-file-name"
-        commit=$(echo ${{ github.sha }} | cut -c1-8)
+        echo VERSION_REF=$(date +'%y%m%d').${{ github.run_number }}.$(echo ${{ github.sha }} | cut -c1-8) >> $GITHUB_ENV
 
-        export DEBFULLNAME="GitHub actions runner"
-        export DEBEMAIL="noreply@github.com"
-        debchange --local "~${sanitized_docker}+${commit}" "Github build. Run id: ${{ github.run_id }}. Run number: ${{ github.run_number }}."
-        
+        echo DEBFULLNAME="GitHub actions runner" >> $GITHUB_ENV
+        echo DEBEMAIL="noreply@github.com" >> $GITHUB_ENV
         echo "::endgroup::"
 
+    - name: Prepare source package
+      uses: kohlerdominik/docker-run-action@v2.0.0
+      with:
+        image: ${{ inputs.docker-image }}
+        environment: |
+          DEBIAN_FRONTEND=noninteractive
+          DEBFULLNAME=${{ env.DEBFULLNAME }}
+          DEBEMAIL=${{ env.DEBEMAIL }}
+        volumes: ${{ github.workspace }}:${{ github.workspace }}
+        workdir: ${{ github.workspace }}/${{ inputs.source-dir }}
+        shell: bash
+        run: |
+          echo "::group::Update builder instance and install dependencies"
+          set -eu
+
+          echo 'APT::Get::Assume-Yes "true";' > /etc/apt/apt.conf.d/90aptyes
+          apt update
+          apt install devscripts lsb-release
+          echo "::endgroup::"
+
+          echo "::group::Update debian package changelog"
+          dch --local "~$(lsb_release -r -s)+git${{ env.VERSION_REF }}" \
+            "Github build. Run id: ${{ github.run_id }}. Run number: ${{ github.run_number }}."
+
+          dpkg-parsechangelog
+          echo "::endgroup::"
+
+    - name: Parse package source info
+      shell: bash
+      run: |
         echo "::group::Parsing name and version"
+        set -eu
+
+        cd '${{ inputs.source-dir }}'
         echo PKG_NAME="$( dpkg-parsechangelog --show-field source )" >> $GITHUB_ENV
         echo PKG_VERSION="$( dpkg-parsechangelog --show-field version )" >> $GITHUB_ENV
         cd -
@@ -87,7 +109,7 @@ runs:
         echo "::endgroup::"
 
     - name: Build source package
-      uses: kohlerdominik/docker-run-action@v1.2.0
+      uses: kohlerdominik/docker-run-action@v2.0.0
       with:
         image: ${{ inputs.docker-image }}
         environment: |
@@ -113,6 +135,10 @@ runs:
             apt install ${deps[@]}
           fi
           echo "::endgroup::"
+
+          if command -v git &> /dev/null; then
+            git config --system --add safe.directory "${{ github.workspace }}"
+          fi
 
           GITHUB_TOKEN="${{ inputs.token }}"
           if [ -n "${GITHUB_TOKEN}" ]; then
@@ -155,7 +181,7 @@ runs:
         echo "::endgroup::"
 
     - name: Build packages
-      uses: kohlerdominik/docker-run-action@v1.2.0
+      uses: kohlerdominik/docker-run-action@v2.0.0
       with:
         image: ${{ inputs.docker-image }}
         options: --cap-add=NET_ADMIN
