debian-build: Use version number so that it can override last release
Use a +git syntax and there we use incremental version values.

Finally add the distro version as a minor factor, so that builds on the
same code for different distros only rely on that

--- a/gh-actions/common/build-debian/action.yml
+++ b/gh-actions/common/build-debian/action.yml
@@ -87,7 +87,7 @@ runs:
           echo "::endgroup::"
 
           echo "::group::Update debian package changelog"
-          dch --local "~$(lsb_release -r -s)+git${{ env.VERSION_REF }}" \
+          dch --local "+git${{ env.VERSION_REF }}~$(lsb_release -r -s)." \
             "Github build. Run id: ${{ github.run_id }}. Run number: ${{ github.run_number }}." \
             --distribution "$(lsb_release -c -s)"
 
