build-debian: Install fakeroot by default
Since we're building as user

--- a/gh-actions/common/build-debian/action.yml
+++ b/gh-actions/common/build-debian/action.yml
@@ -221,6 +221,10 @@ runs:
           apt autoremove
           echo "::endgroup::"
 
+          echo "::group::Install fakeroot"
+          apt install fakeroot
+          echo "::endgroup::"
+
           echo "::group::Install build dependencies"
           apt build-dep .
           echo "::endgroup::"
