gotestfmt: Add comment to first line of run keyword
In the output of the GitHub Actions run, the commands run for each step
are collapsed, with only the first line being shown unless it's
expanded. It's not helpful if that line is "set -eu" for all our
multi-command steps, so we add a comment to the fist line instead which
describes what the commands are doing.

--- a/gh-actions/go/gotestfmt/action.yaml
+++ b/gh-actions/go/gotestfmt/action.yaml
@@ -11,6 +11,7 @@ runs:
     - name: Install gotestfmt
       working-directory: ${{ inputs.tools-directory }}
       run: |
+        # Install gotestfmt
         set -eu
         TOOL=github.com/gotesttools/gotestfmt/v2/cmd/gotestfmt
         VERSION=$(go mod edit --json | jq -r ".Require[] | select(.Path==\"${TOOL}\") | .Version" || true)
@@ -24,11 +25,12 @@ runs:
 
     - name: Install gotestfmt wrapper script
       run: |
+        # Install gotestfmt wrapper script
+        set -eu
         # We install the wrapper to a different directory to avoid conflicts
         # with the gotestfmt binary. We also add the directory to the PATH.
         # The wrapper script expects gotestfmt to be in $GOPATH/bin, where
         # go install puts it.
-        set -eu
         DEST=${GITHUB_ACTION_PATH}/bin
         install -D --mode=755 -t "${DEST}" "${GITHUB_ACTION_PATH}/gotestfmt"
         echo "${DEST}" >> "${GITHUB_PATH}"
