--- a/gh-actions/go/code-sanity/action.yaml
+++ b/gh-actions/go/code-sanity/action.yaml
@@ -44,10 +44,10 @@ runs:
         echo "::endgroup::"
         jq --version
     - name: Get tooling version
-      shell: bash
       id: tooling-version
       if: ${{ always() }}
       working-directory: ${{ inputs.tools-directory }}
+      shell: bash
       run: |
         function set-version {
           name=$1
@@ -104,6 +104,7 @@ runs:
       if: ${{ always() }}
       id: update-mod-files
       working-directory: ${{ inputs.working-directory }}
+      shell: bash
       run: |
         echo Update module files
         set -eu
@@ -111,7 +112,6 @@ runs:
         echo "::group::Download dependencies"
         go mod tidy
         echo "::endgroup::"
-      shell: bash
     - name: Ensure there is no diff between current and generated go.mod and go.sum files
       if: ${{ always() && steps.update-mod-files.outcome == 'success' }}
       id: gomod-check
@@ -134,6 +134,7 @@ runs:
       if: ${{ always() }}
       id: build-check
       working-directory: ${{ inputs.working-directory }}
+      shell: bash
       run: |
         echo Build any binaries
         set -eu
@@ -153,22 +154,22 @@ runs:
         fi
 
         go build ${tags} ./...
-      shell: bash
 
     - name: Installing govulncheck
       if: ${{ always() && steps.tooling-version.outcome == 'success' }}
       id: install-govulncheck
       working-directory: ${{ runner.temp }}
+      shell: bash
       run: |
         echo Installing govulncheck
         set -eu
 
         go install golang.org/x/vuln/cmd/govulncheck@${{ steps.tooling-version.outputs.vulncheck }}
-      shell: bash
     - name: Known vulnerabilities check
       if: ${{ always() && steps.install-govulncheck.outcome == 'success' }}
       id: vulnerabilities-check
       working-directory: ${{ inputs.working-directory }}
+      shell: bash
       run: |
         echo Checking known vulnerabilities
         set -eu
@@ -178,13 +179,13 @@ runs:
           tags="-tags=${tags}"
         fi
 
-        govulncheck -test ${tags} ./...
-      shell: bash
+        govulncheck -test ${tags} ./..
 
     - name: Compute title of summary
       if: ${{ always() }}
       id: compute-summary-title
       working-directory: ${{ inputs.working-directory }}
+      shell: bash
       run: |
         echo Compute title of summary based on current directory
         set -eu
@@ -198,7 +199,6 @@ runs:
           title="${title} on ${dir}"
         fi
         echo "title=${title}" >> $GITHUB_OUTPUT
-      shell: bash
     - name: Summary
       if: ${{ always() && steps.compute-summary-title.outcome == 'success' }}
       # https://github.com/orgs/community/discussions/25246
